update for widget

--- a/webpaser/AndroidManifest.xml
+++ b/webpaser/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gaze.webpaser"
     android:versionCode="1"
-    android:versionName="1.0" >
-
+    android:versionName="1.0" 
+    android:installLocation="internalOnly"
+    >
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
@@ -20,7 +21,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
